[package]
name = "dash-mpd"
version = "0.19.1"
authors = ["Eric Marsden <eric.marsden@risk-engineering.org>"]
description = "Parse, serialize, download an MPD manifest for MPEG-DASH or WebM-DASH media streaming"
readme = "README.md"
repository = "https://github.com/emarsden/dash-mpd-rs"
license = "MIT"
keywords = ["video", "streaming", "MPD", "DASH", "MPEG"]
categories = ["multimedia", "multimedia::video", "parser-implementations"]
publish = true
edition = "2021"

[dependencies]
base64 = "0.22.1"
base64-serde = "0.8.0"
byteorder = "1.5.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = "0.1.20"
serde_ignored = { version = "0.1.14", optional = true }
serde_with = { version = "3.16.0", features = ["base64"] }
quick-xml = { version = "0.38.4", features = ["serialize", "overlapped-lists"] }
url = "2.5.7"
chrono = { version = "0.4.42", features = ["serde"] }
num-traits = "0.2.19"
iso8601 = "0.6.3"
regex = { version = "1.12.2", default-features = false, features = ["std", "unicode-perl"] }
thiserror = "2.0.17"
fs-err = "3.2.1"
tracing = { version = "0.1.43", features = ["attributes", "std"] }
data-url = { version = "0.3.2", optional = true }
bytes = "1.11.0"
reqwest = { version = "0.12.26", default-features = false, features = ["cookies"], optional = true }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "macros"], optional = true }
backoff = { version = "0.4.0", features = ["tokio"], optional = true }
governor = { version = "0.10.2", optional = true }
xot = { version = "0.31.2", optional = true }
tempfile = { version = "3.23.0", optional = true }
sanitise-file-name = { version = "1.0.0", optional = true }
ac-ffmpeg = { version = "0.19.0", optional = true }
ffprobe = { version = "0.4.0", optional = true }
file-format = { version = "0.28.0", features = ["reader"], optional = true }
bstr = { version = "1.12.1", optional = true }
hex-literal = { version = "1.1.0", optional = true }
pssh-box = { version = "0.2.1", optional = true }
hxdmp = "0.2.1"
webm-iterable = "0.6.4"
dir_spec = "0.5.0"

[dev-dependencies]
sha2 = "0.10.9"
hex-literal = "1.0.0"
colored = "3.0.0"
indicatif = "0.18.3"
# We pin to this version because the latest versions require a bleeding edge Rust toolchain.
clap = "=4.4.18"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "macros"] }
time = { version = "0.3", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "ansi", "tracing-log"] }
proptest = "1.9.0"
http = "1.3.1"
axum = "0.8.7"
axum-auth = "0.8.1"
axum-server = "0.7.3"
noxious-client = "1.0.4"
reqwest = { version = "0.12.26", default-features = false, features = ["cookies", "json", "blocking"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
roxmltree = "0.21.1"
xmlem = "0.3.3"
json = "0.12.4"
mp4 = "0.14.0"
image = "0.25.9"
pretty_assertions = "1.4.1"
approx = "0.5.1"
assert_cmd = "2.1.1"

[features]
default = ["fetch", "native-tls", "compression", "socks", "scte35", "http2"]
fetch = ["data-url", "reqwest", "tokio", "backoff", "governor", "xot", "tempfile", "sanitise-file-name", "ffprobe", "file-format", "bstr", "hex-literal", "pssh-box"]
libav = ["ac-ffmpeg"]
scte35 = []
warn_ignored_elements = ["serde_ignored"]
compression = ["reqwest/gzip", "reqwest/brotli", "reqwest/zstd"]
socks = ["reqwest/socks"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
hickory-dns = ["reqwest/hickory-dns"]
http2 = ["reqwest/http2"]
# This option currently requires the RUSTFLAGS='--cfg reqwest_unstable' environment variable to be set.
http3 = ["reqwest/http3", "reqwest/rustls-tls-webpki-roots"]
sandbox = ["dep:landlock"]

[target.'cfg(unix)'.dependencies]
xattr = "1.6.1"

[target.'cfg(target_os="linux")'.dependencies]
landlock = { version = "0.4.4", optional = true }
