[package]
name = "dash-mpd"
version = "0.19.3"
authors = ["Eric Marsden <eric.marsden@risk-engineering.org>"]
description = "Parse, serialize, download an MPD manifest for MPEG-DASH or WebM-DASH media streaming"
readme = "README.md"
repository = "https://github.com/emarsden/dash-mpd-rs"
license = "MIT"
keywords = ["video", "streaming", "MPD", "DASH", "MPEG"]
categories = ["multimedia", "multimedia::video", "parser-implementations"]
publish = true
edition = "2021"

[dependencies]
base64 = "0.22.1"
base64-serde = "0.8.0"
byteorder = "1.5.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = "0.1.20"
serde_ignored = { version = "0.1.14", optional = true }
serde_with = { version = "3.16.1", features = ["base64"] }
quick-xml = { version = "0.39.0", features = ["serialize", "overlapped-lists"] }
url = "2.5.8"
chrono = { version = "0.4.43", features = ["serde"] }
num-traits = "0.2.19"
iso8601 = "0.6.3"
regex = { version = "1.12.3", default-features = false, features = ["std", "unicode-perl"] }
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["attributes", "std"] }
data-url = { version = "0.3.2", optional = true }
bytes = "1.11.1"
reqwest = { version = "0.13.2", default-features = false, features = ["cookies", "charset", "system-proxy"], optional = true }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "time", "macros", "fs", "io-util"], optional = true }
futures-util = "0.3.32"
backon = { version = "1.6.0", features = ["tokio"], optional = true }
governor = { version = "0.10.4", optional = true }
xot = { version = "0.31.2", optional = true }
tempfile = { version = "3.25.0", optional = true }
sanitise-file-name = { version = "1.0.0", optional = true }
ac-ffmpeg = { version = "0.19.0", optional = true }
ffprobe = { version = "0.4.0", optional = true }
file-format = { version = "0.28.0", features = ["reader"], optional = true }
bstr = { version = "1.12.1", optional = true }
hex-literal = { version = "1.1.0", optional = true }
pssh-box = { version = "0.2.3", optional = true }
humantime = { version = "2.3.0", optional = true }
dir_spec = { version = "0.5.0", optional = true }
hxdmp = "0.2.1"
webm-iterable = "0.6.4"
edit-distance = "2.2.2"

[dev-dependencies]
sha2 = "0.10.9"
hex-literal = "1.1.0"
colored = "3.1.1"
indicatif = "0.18.4"
clap = "4.5.60"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "time", "macros"] }
time = { version = "0.3.47", features = ["macros"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time", "ansi", "tracing-log"] }
proptest = "1.10.0"
http = "1.4.0"
axum = "0.8.8"
axum-auth = "0.8.1"
axum-server = "0.8.0"
reqwest = { version = "0.13.2", default-features = false, features = ["cookies", "json", "blocking"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
roxmltree = "0.21.1"
xmlem = "0.3.3"
jzon = "0.12.5"
mp4 = "0.14.0"
image = "0.25.9"
pretty_assertions = "1.4.1"
approx = "0.5.1"
assert_cmd = "2.1.2"

[features]
default = ["fetch", "native-tls", "compression", "socks", "scte35", "http2"]
fetch = ["data-url", "reqwest", "tokio", "backon", "governor", "xot", "tempfile", "sanitise-file-name", "ffprobe", "file-format", "bstr", "hex-literal", "pssh-box", "humantime"]
libav = ["dep:ac-ffmpeg"]
scte35 = []
warn_ignored_elements = ["dep:serde_ignored"]
compression = ["reqwest/gzip", "reqwest/brotli", "reqwest/zstd"]
socks = ["reqwest/socks"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]
hickory-dns = ["reqwest/hickory-dns"]
http2 = ["reqwest/http2"]
# This option currently requires the RUSTFLAGS='--cfg reqwest_unstable' environment variable to be set.
http3 = ["reqwest/http3"]
sandbox = ["dep:landlock", "dep:dir_spec"]

[target.'cfg(unix)'.dependencies]
xattr = "1.6.1"

[target.'cfg(target_os="linux")'.dependencies]
landlock = { version = "0.4.4", optional = true }
